# portals

./: LICENSE  pyproject.toml
src/portals/: __init__.py  core.py  local_portal.py  promised_value.py  server_portal.py  with_middleware.py
src/portals/suppliers/: close.py  crypto.py  init.py  local.py  open.py  queue.py  send.py
src/portals_lib/: __init__.py  client_portal.py  core.py  fetch_ether.py  local_portal.py  micro_future.py  server_portal.py
src/portals_lib/suppliers/: __init__.py  enter.py  ether.py  guest.py  json_packager.py  leave.py  local.py  queue.py  receive.py  remote.py  send.py
tests/: test_portals.py  test_server.py
