[project]
name = "portals"
version = "0.0.2"
authors = [{ name = "Sergey Shkatula", email = "sergey@ceil.dev" }]
description = "Portals"
keywords = ["portals", "portal", "interoperation", "functional"]
requires-python = ">=3.7"
license = "MIT"
readme = "README.md"
dependencies = ["microenv==0.1.4", "layered-persistence==0.0.2"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portals"]

[project.urls]
Homepage = "https://github.com/ceil-python/portals"
